Added device meta

--- a/module2site.html
+++ b/module2site.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- Text style assignment -->
+        <!-- Text style assignment and mobile style -->
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Title of the page -->
         <title> 
             Module2 Solution Page
