Fixed column spacing, magrins padding and borders.

--- a/module2site.html
+++ b/module2site.html
@@ -46,7 +46,7 @@
                 <p>
                     Lastly, I worked on the css file following the task points, to make sure I am including every detail how my page should
                     look like. I focused on the lessons about responsive design, tested my page to make sure it is behaving as I intended. 
-                    Publishing the project also belongs to this step, although I would rather consider it a step 4. Git &smile; .
+                    Publishing the project also belongs to this step, although I would rather consider it a step 4.
                 </p>
             </div>
         </div>
