--- a/module3site.html
+++ b/module3site.html
@@ -18,8 +18,17 @@
   </head>
 
 <body>
-
-  <h1 class="playfair-display-font">My Development Process</h1>
+    <header>
+        <nav id="header-nav" class="navbar navbar-default">
+            <div class="container">
+                <div class="navbar-header">
+                    <a href="module3site.html" class="">
+                        <div id="logo-img" alt="Logo image"></div>
+                    </a>
+                </div>
+            </div>
+        </nav>
+    </header>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="jquery-3.7.1.js"></script>
