--- a/module3site.html
+++ b/module3site.html
@@ -22,8 +22,8 @@
         <nav id="header-nav" class="navbar navbar-default">
             <div class="container">
                 <div class="navbar-header">
-                    <a href="module3site.html" class="">
-                        <div id="logo-img" alt="Logo image"></div>
+                    <a href="module3site.html" class="pull-left visible-md visible-lg">
+                        <div id="logo-img"></div>
                     </a>
                 </div>
             </div>
