--- a/module3site.html
+++ b/module3site.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Character, compatibility and phone basics setup -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,53 +15,58 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-  </head>
+</head>
 
 <body>
-  <header>
-    <nav id="header-nav" class="navbar navbar-default">
-        <div class="container">
-            <div class="d-flex justify-content-between align-items-center">
-                <!-- Logo and title -->
-                <div class="d-flex align-items-center">
-                    <!-- Clickable logo, visible in medium and large screens -->
-                    <a href="module3site.html" class="d-none d-md-block">
-                        <div id="logo-img"></div>
-                    </a>
-
-                    <!-- Clickable title (always visible) -->
-                    <div class="navbar-brand">
-                        <a href="module3site.html">
-                            <h1>HolfTa's Process</h1>
+    <header>
+        <nav id="header-nav" class="navbar navbar-default">
+            <div class="container">
+                <div class="d-flex justify-content-between align-items-center">
+                    <!-- Logo and title (visible in medium and large screens) -->
+                    <div class="navbar-header d-md-flex align-items-center">
+                        <!-- Clickable logo -->
+                        <a href="module3site.html" class="d-none d-md-block">
+                            <div id="logo-img"></div>
                         </a>
+
+                        <!-- Clickable title -->
+                        <div class="navbar-brand">
+                            <a href="module3site.html">
+                                <h1>HolfTa's Process</h1>
+                            </a>
+                        </div>
                     </div>
+
+                    <!-- Collapsible Navbar button, only visible on small screens -->
+                    <button type="button" class="navbar-toggle collapsed d-md-none ml-auto" data-toggle="collapse" 
+                            data-target="#collapsable-nav" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                 </div>
 
-                <!-- Collapsible Navbar button, only visible on small screens -->
-                <button type="button" class="navbar-toggle collapsed d-md-none ml-auto" data-toggle="collapse" 
-                        data-target="#collapsable-nav" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+                <!-- Collapsible nav content -->
+                <div id="collapsable-nav" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#">Step One</a></li>
+                        <li><a href="#">Step Two</a></li>
+                        <li><a href="#">Step Three</a></li>
+                    </ul>
+                </div>
             </div>
+        </nav>
+    </header>
 
-            <!-- Collapsible nav content -->
-            <div id="collapsable-nav" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-  </header>
+    <!-- Page Title -->
+    <div class="heading-container">
+        <h1 class="page-heading">My Process</h1>
+    </div>
 
-  <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="jquery-3.7.1.js"></script>
-  <script src="Bootstrap/js/bootstrap.min.js"></script>
-  <script src="js_folder/script.js"></script>
+    <!-- jQuery (Bootstrap JS plugins depend on it) -->
+    <script src="jquery-3.7.1.js"></script>
+    <script src="Bootstrap/js/bootstrap.min.js"></script>
+    <script src="js_folder/script.js"></script>
 </body>
 </html>
