--- a/module3site.html
+++ b/module3site.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<head>
+  <head>
     <!-- Character, compatibility and phone basics setup -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-</head>
+  </head>
 
 <body>
     <header>
@@ -38,7 +38,7 @@
                     </div>
 
                     <!-- Collapsible Navbar button, only visible on small screens -->
-                    <button type="button" class="navbar-toggle collapsed d-md-none ml-auto" data-toggle="collapse" 
+                    <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" 
                             data-target="#collapsable-nav" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
@@ -64,9 +64,25 @@
         <h1 class="page-heading">My Process</h1>
     </div>
 
-    <!-- jQuery (Bootstrap JS plugins depend on it) -->
-    <script src="jquery-3.7.1.js"></script>
-    <script src="Bootstrap/js/bootstrap.min.js"></script>
-    <script src="js_folder/script.js"></script>
+    <!-- Tall Section with Bootstrap Grid -->
+    <section class="container-fluid tall-section">
+        <div class="row">
+            <div class="col-xs-12">
+                <h2>My Full-Width Section</h2>
+                <p>
+                    This section takes up the entire width of the page, with some margins.
+                    It's set to be 1000px tall, and will require scrolling down to view its bottom.
+                    You can add more content here to make it feel even taller. This section will 
+                    maintain its full width across all screen sizes, ensuring responsiveness for 
+                    desktop, tablet, and mobile views.
+                </p>
+            </div>
+        </div>
+    </section>
+
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="jquery-3.7.1.js"></script>
+  <script src="Bootstrap/js/bootstrap.min.js"></script>
+  <script src="js_folder/script.js"></script>
 </body>
 </html>
